--- a/src/containers/mainLayout/index.less
+++ b/src/containers/mainLayout/index.less
@@ -56,6 +56,7 @@
         &-body {
             margin: 10px;
             background: #FFF;
+            height: 100%;
         }
         &-footer {
             height: 48px;
