add html styles

--- a/src/containers/mainLayout/index.less
+++ b/src/containers/mainLayout/index.less
@@ -30,6 +30,8 @@
                     .more {
                         margin-right: 10px;
                     }
+                    .close {
+                    }
                 }
             }
         }
