--- a/src/containers/leftBody/index.less
+++ b/src/containers/leftBody/index.less
@@ -1,19 +1,39 @@
 .main {
-    display: flex;
-    justify-content: space-between;
+    width: 100%;
     height: 100%;
     background-color: #f0f2f5;
-    .left {
-        width: 70%;
-        height: 100%;
-        padding: 10px;
-        background-color:#FFFFFF;
+    &-header {
+        height: 64px; width: 100%;
+        margin-bottom:10px;
+        background: #FFF;
+        display: flex;
+        justify-content: flex-end;
+        .operation {
+            display: inherit;
+            margin-right: 20px;
+            align-items: center;
+            a{
+                margin-left: 10px;
+            }
+        }
     }
-    .right {
-        width: 30%;
-        height: 100%;
-        padding: 10px;
-        margin-left: 10px;
-        background-color:#FFFFFF;
+    &-body{
+        display: flex;
+        justify-content: space-between;
+        height: calc(~'100% - 74px');
+        background-color: #f0f2f5;
+        &-left {
+            width: 70%;
+            height: 100%;
+            padding: 10px;
+            background-color:#FFFFFF;
+        }
+        &-right {
+            width: 30%;
+            height: 100%;
+            padding: 10px;
+            margin-left: 10px;
+            background-color:#FFFFFF;
+        }
     }
 }
