--- a/src/containers/login/index.less
+++ b/src/containers/login/index.less
@@ -36,7 +36,8 @@
             justify-content: center;
             align-items: center;
             &-tip {
-                padding: 20px;
+                display: flex;
+                margin: 10px;
                 span {
                     display: inline-block;
                     margin-left: 10px;
