--- a/src/containers/mainLayout/index.less
+++ b/src/containers/mainLayout/index.less
@@ -34,6 +34,11 @@
                     }
                 }
             }
+            &-tip {
+                text-align: center;
+                color: #FFF;
+                font-size: 14px;
+            }
         }
         .sider-footer {
             position: absolute;
