change login module

--- a/src/containers/personalPage/index.less
+++ b/src/containers/personalPage/index.less
@@ -34,9 +34,14 @@
     }
     .content {
         margin: 10px;
-        background: #FFF;
+        
         height: 100%;
         padding: 20px 50px;
+        &-tab {
+            width: 70%; height: 100%;
+            padding: 20px;
+            background: #FFF;
+        }
     }
     .footer {
         text-align: center;
