--- a/src/containers/login/index.less
+++ b/src/containers/login/index.less
@@ -1,22 +1,19 @@
 .login {
     width: 100%; height: 100%;
-    background-color: #f0f2f5;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     .loginPage {
-        width: 40%; height: 60%;
+        width: 100%; height: 100%;
         text-align: center;
         box-shadow: 0 4px 30px #ccc;
         &-slogan {
             height: 64px; width: 100%;
             background: #001529;
             display: flex;
-            justify-content: center;
+            justify-content: flex-start;
             align-items: center;
             &-logo {
                 height: 20px; width: 30px;
                 background-color: rgba(0, 0, 0, 0.65);
+                margin-left: 50px;
                 display: inline-block;
             }
             &-title {
@@ -29,12 +26,21 @@
             }
         }
         &-form {
-            width: 70%;height: calc(~'100% - 124px');
+            background-color: yellow;
+            width: 100%;
+            height: calc(~'100% - 124px');
             margin: 30px auto;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            &-account{
+                width: 350px;
+                margin-bottom: 20px;
+            }
+            &-password {
+                width: 350px;
+            }
             &-tip {
                 display: flex;
                 margin: 10px;
