origin: add personalPage

--- a/src/containers/login/index.less
+++ b/src/containers/login/index.less
@@ -1,7 +1,7 @@
 .login {
     width: 100%; height: 100%;
     .loginPage {
-        width: 100%; height: 100%;
+        width: 100%; height: calc(~'100% - 48px');
         text-align: center;
         box-shadow: 0 4px 30px #ccc;
         &-slogan {
@@ -26,20 +26,15 @@
             }
         }
         &-form {
-            background-color: yellow;
             width: 100%;
             height: calc(~'100% - 124px');
-            margin: 30px auto;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            &-account{
+            &-input{
                 width: 350px;
                 margin-bottom: 20px;
-            }
-            &-password {
-                width: 350px;
             }
             &-tip {
                 display: flex;
@@ -62,5 +57,11 @@
                 }
             }
         }
+    }
+    &-footer {
+        height: 48px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
