--- a/src/containers/personalPage/index.less
+++ b/src/containers/personalPage/index.less
@@ -34,17 +34,38 @@
     }
     .content {
         margin: 10px;
-        
         height: 100%;
-        padding: 20px 50px;
+        padding: 20px 30px;
         &-tab {
-            width: 70%; height: 100%;
+            width: 100%;
+            height: calc(~'100% - 120px');
             padding: 20px;
             background: #FFF;
+            border-radius: 4px;
+        }
+        &-infocard {
+            width: 100%;
+            height: 100px;
+            background-color: #FFF;
+            border-radius: 4px;
+            margin: 10px 0px;
+            padding: 10px 20px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
         }
     }
     .footer {
         text-align: center;
         height: 48px;
     }
+}
+
+.personal-table-operation {
+    display: flex;
+    justify-content: space-around;
+    &-button{
+        margin-right: 10px;
+    }
+
 }
