--- a/src/containers/register/index.less
+++ b/src/containers/register/index.less
@@ -1,7 +1,7 @@
-.login {
+.signin {
     width: 100%; height: 100%;
-    .loginPage {
-        width: 100%; height: 100%;
+    .signinPage {
+        width: 100%; height: calc(~'100% - 48px');
         text-align: center;
         box-shadow: 0 4px 30px #ccc;
         &-slogan {
@@ -26,7 +26,7 @@
             }
         }
         &-form {
-            width: 50%;height: calc(~'100% - 124px');
+            width: 100%;height: calc(~'100% - 124px');
             margin: 30px auto;
             display: flex;
             flex-direction: column;
@@ -46,7 +46,7 @@
                     margin-left: 10px;
                 }
             }
-            &-login {
+            &-signin {
                 width: 150px;
                 height: 30px;
                 background-color: #001529;
@@ -59,5 +59,12 @@
                 }
             }
         }
+    }
+
+    &-footer {
+        height: 48px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
